Refactored decorators to allow for easier addition of new decorators in the future. Fixed issue where a category was being marked as failed despite only containing successful tests if those cases were present in a sub-category and not directly in this category. Added text output folder for ease of getting baselines for custom and console output. Added buttons for collapsing and expanding all categories or all visible cases or steps.
git-svn-id: https://www.h3d.org:8090/H3DAPI/trunk/H3DAPI@3233 610dfd11-2700-0410-9b68-9ae28eac5983

--- a/Util/UnitTests/www/Results.css
+++ b/Util/UnitTests/www/Results.css
@@ -221,6 +221,15 @@ div#Options {
   z-index: 100;
 }
 
+.Options_Header {
+  margin-bottom: 5px;
+}
+
+
+input#Options_Toggle {
+  margin: 5px;
+}
+
 
 label h3 {
   display:inline;
